Fixed hamburger + main image alignment

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="index.html">Javier Thiele-Ruiz</a>
         </div>
 
-        <div class="d-inline-block d-lg-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle "><span class="icon-menu h3"></span></a></div>
+        <div class="d-inline-block d-lg-none mr-3 ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle "><span class="icon-menu h3"></span></a></div>
 
         <div class="main-menu">
           <ul class="js-clone-nav">
@@ -74,7 +74,7 @@
 
         <section class="site-section-hero bg-image mb-5" style=""  id="section-home">
           <div class="row justify-content-center align-items-center">
-            <div class="col-md-10 text-center">
+            <div class="m-4 col-md-11 text-center">
               <!-- <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1> -->
               <a href="#section-photos" class="d-block " >
                 <img src="images/West Valley Student Services.jpg" alt="Image" class="img-fluid mb-0">
@@ -89,9 +89,12 @@
               <h2 class="heading">Portfolio</h2>
             </div>
           </div>
+            <div id="section-photos" class="anchor">
+          </div>
 
-          <section class="photos" id="section-photos">
-            <div class="grid">
+
+          <section class="photos" >
+            <div class="grid" >
               <div class="grid-sizer"></div>
 
               <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
