Fixed css not being uploaded

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="m-3 site-section mx-auto">
 
-          <div class="row mb-3">
+          <div class="row mb-3 mt-3">
             <div class="col-12 text-center">
               <h2 class="heading">Portfolio</h2>
             </div>
@@ -93,16 +93,16 @@
           </div>
 
 
-          <section class="photos" >
+          <section class="photos pt-4" >
             <div class="grid" >
               <div class="grid-sizer"></div>
 
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item">
                 <a href="images/West Valley Hero.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Hero.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item" >
                 <a href="images/West Valley Editorial.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Editorial.jpg" alt="Image" class="mb-0">
                 </a>
