--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <h2 class="heading">Portfolio</h2>
             </div>
           </div>
-            <div id="section-photos" class="anchor">
+            <div data-aos="fade-up"  data-aos-delay="100" id="section-photos" class="anchor">
           </div>
 
 
@@ -97,22 +97,22 @@
             <div class="grid" >
               <div class="grid-sizer"></div>
 
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item">
+              <div class="grid-item">
                 <a href="images/West Valley Hero.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
-                  <img src="images/West Valley Hero.jpg" alt="Image" class="mb-0">
+                  <img src="images/West Valley Hero.jpg" alt="Image" class="mb-0 photoitem">
                 </a>
               </div>
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item" >
+              <div class="grid-item" >
                 <a href="images/West Valley Editorial.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Editorial.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div class="grid-item " >
                 <a href="images/West Valley Editorial 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Editorial 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div class="grid-item " >
                 <a href="images/West Valley Spec Detail 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Spec Detail 2.jpg" alt="Image" class="mb-0">
                 </a>
@@ -123,22 +123,22 @@
               <!--   </a> -->
               <!-- </div> -->
 
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item" >
+              <div class="grid-item" >
                 <a href="images/Family Justice 1.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 1.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div class="grid-item " >
                 <a href="images/Family Justice 2.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-
-              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
+              <div class="grid-item " >
                 <a href="images/Family Justice 3.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 3.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
+
 
 
             </div>
